fixed the prop drilling with component composition, using children to pass props

--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,9 @@ body {
   justify-self: end;
   font-size: 1.8rem;
 }
+.num-results span {
+  color: var(--color-red);
+}
 
 .btn-toggle {
   position: absolute;
